# ocr-consensus

./: .gitignore  README.md  pyproject.toml
data/: easyocrextractor_results.json  ocr_results.json  pytesseractextractor_results.json  trocrextractor_results.json
src/ocr_extraction/: consensus_pipeline.py  extractors.py  main.py  ocr_pipeline.py
