[tool.poetry]
name = "ocr-extraction"
version = "0.1.0"
description = ""
authors = ["Zarif Aziz <zarifaziz08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
loguru = "^0.7.2"
typer = "^0.12.3"
easyocr = "^1.7.1"
pytesseract = "^0.3.10"
pillow = "^10.3.0"
transformers = "^4.40.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
